# TempEst-NEWT

./: NEXT_autorun.ipynb  NEXT_tests.ipynb  README.md  animate.ipynb  anomaly.ipynb  case_studies.ipynb  clear_ck_fcst.ipynb  coefficient_est.ipynb  coefficient_est_byyr.ipynb  coefficient_est_drywet.ipynb  dynamic_sensitivity.ipynb  dynamic_ssn.ipynb  equifinality.ipynb  equifinality.py  forecast.ipynb  reach_analysis.ipynb  reach_proc.py  realization_file_newt.json  setup.cfg  validations.ipynb  watershed_run.ipynb
src/NEWT/: __init__.py  analysis.py  bmi.py  coef_est.py  datatools.py  engines.py  make_coefficients.py  statics.py  watershed.py
