[metadata]
name = tempest_newt
version = 0.1.0
author = Daniel Philippus
author_email = daniel@dphilippus.com
description = NEWT, Near-term Expected Watershed Temperatures: a statistical stream temperature model with coefficient estimation for ungaged watersheds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantum-dan/tempest-newt
project_urls = 
	Bug Tracker = https://github.com/quantum-dan/tempest-newt/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.12
install_requires = 
	pandas
	numpy

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0