[metadata]
name = TempEst-NEWT
version = 0.1.0
author = Daniel Philippus
author_email = daniel@dphilippus.com
description = NEWT, Near-term Expected Watershed Temperatures: a statistical stream temperature model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mines-ciroh/tempest-newt
project_urls = 
	Bug Tracker = https://github.com/mines-ciroh/tempest-newt/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.0
install_requires = 
	pandas
	numpy
	rtseason
	bmipy
	scipy
	pygam

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0
